# talise-main

./: .easignore  .editorconfig  .gitignore  .vercelignore  ARCHITECTURE.md  ASSETS.md  BRIEF.md  FLOWS.md  HACKATHON.md  PLAN.md  README.md  SECURITY.md  STRATEGY.md  STRUCTURE.md  THREAT_MODEL.md  WEB_ARCHITECTURE.md  WORKPLAN.md  package.json
.github/.cursor/: hooks.json
android/: .gitignore  PLAN.md  README.md  settings.gradle.kts
archive/: README.md
audits/: 2026-05-27-resend-audit.md  2026-05-27-resend-dns-todo.md  2026-05-27-secrets-audit.md  2026-05-27-security-fixes.md  codebase-audit.md
cli/: .gitignore  LICENSE  PLAN.md  README.md  package-lock.json  package.json  tsconfig.json
cli/src/: auth.ts  config.ts  (+8 more)
docs/: BLUEFIN_RWA_SCOPE.md  DEMO_SCRIPT.md  LITEPAPER.md  PERF.md  PITCH.md  ZKLOGIN-PROVER-COMPARISON.md  ios-known-warnings.md  sponsorship-matrix-2026-05-29.md
infra/: README.md
ios/: PLAN.md  README.md  project.yml
mobile/: .easignore  PORTING.md  app.json  eas.json  metro.config.js  package-lock.json  package.json
move/: README.md
move/talise-privacy/circuit/: .gitignore  Cargo.toml
move/talise-privacy/circuit/src/: lib.rs  prover.rs
prover/: README.md
research/: market_research.md  standup.md
scripts/: DEPLOY-GPU-PROVER.md  db-cleanup-2026-05-29.sql  drain-vault-to-admin.mjs  fix-suins-targets.mjs  prod-smoke.sh  transfer-suins-to-admin.mjs  zk-prover-smoke.sh
web/: .env.example  .gitignore  README.md  instrumentation.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  vercel.json  vitest.integration.config.ts
(+1230 files in other folders)
