[package]
name = "talise-privacy-circuit"
version = "0.1.0"
edition = "2021"
description = "Talise privacy ZK circuit (vendored from Interest Protocol Vortex, BN254 Groth16). DEV/TEST keys only — NOT a trusted setup ceremony."

[lib]
name = "talise_privacy_circuit"
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.98"
ark-bn254 = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = [
    "crh",
    "r1cs",
    "merkle_tree",
] }
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
hex = "0.4.3"
rand_chacha = "0.3"
rand_core = "0.6"
# Real entropy for proof randomness (OsRng) — NOT a zero seed.
getrandom = "0.2"
rand = "0.8"
num-bigint = "0.4"
num-traits = "0.2"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
